# cas-practic

./: pyproject.toml
cas_practic/: churn_predict_app.py  churn_predict_service.py
models/: churn-model.pck
notebooks/: CasPractic.ipynb  client.ipynb  prova.ipynb
tests/: prova-pandas.py
