[tool.poetry]
name = "cas-practic"
version = "0.1.0"
description = ""
authors = ["tnavarrete-iedib <tnavarrete@iedib.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
ipykernel = "^6.27.1"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
